# SyllabusAI-Agents

./: .gitignore  README.md  pyproject.toml  sample_requirements.txt
knowledge/: user_preference.txt
src/syllabus_ai_agents/: crew.py  main.py
src/syllabus_ai_agents/config/: agents.yaml  tasks.yaml
